peac_dev/force-app/main/default/objects/Tolerance_Override__mdt/Tolerance_Override__mdt.object-meta.xml
<CustomObject>
    <label>Tolerance Override</label>
    <pluralLabel>Tolerance Overrides</pluralLabel>
</CustomObject>