peac_dev/force-app/main/default/objects/Tolerance_Override__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>