peac_dev/force-app/main/default/objects/Tolerance_Override__mdt/fields/High_Amount__c.field-meta.xml
<CustomField>
    <fullName>High_Amount__c</fullName>
    <label>High Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>