peac_dev/force-app/main/default/objects/Tolerance_Override__mdt/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <label>Variance</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>