peac_dev/force-app/main/default/objects/Tolerance_Override__mdt/fields/Variance_Type__c.field-meta.xml
<CustomField>
    <fullName>Variance_Type__c</fullName>
    <label>Variance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
                <default>true</default>
                <label>Percent</label>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>