peac_dev/force-app/main/default/objects/Tolerance_Override__mdt/listViews/All_Tolerances.listView-meta.xml
<ListView>
    <fullName>All_Tolerances</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Account__c</columns>
    <columns>Low_Amount__c</columns>
    <columns>High_Amount__c</columns>
    <columns>Variance__c</columns>
    <columns>Variance_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Tolerances</label>
</ListView>